third commit part 4

--- a/entries/entry7/style.css
+++ b/entries/entry7/style.css
@@ -10,3 +10,9 @@
       transform: rotate(359deg);
     }
   }
+
+  body {
+    background-color: #f5f3e7;
+    font-family: wayfinder-cf, serif;
+    padding: 60px;
+}
